making api, understood how to make one
(heidi sql is shit)

--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "musicplayer-server",
+  "name": "node-express-server-rest-api",
   "version": "1.0.0",
-  "description": "Server Used to test MusicPlayer client",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node src/index.js",
+    "test": "echo \"No test specified\" && exit 0"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@babel/node": "^7.16.8",
+    "@babel/preset-env": "^7.16.11",
+    "nodemon": "^2.0.15"
+  },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "mysql": "^2.18.1"
+    "uuid": "^8.3.2"
   }
 }
