--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mysql": "^2.18.1",
+    "typescript": "^4.6.2",
     "uuid": "^8.3.2"
   }
 }
