--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "typescript": "^4.6.2",
     "uuid": "^8.3.2"
