--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
-databasehost="localhost"
-databaseuser="root"
-databasepassword=""
-databasename="musicplayerapi"
+databasehost="10.42.0.1"
+databaseuser="developpement"
+databasepassword="lulu5294."
+databasename="musicplayerapi"  
